# aardwolf-social

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: aardwolf-build.yml  docker.yml  rust-clippy-reborn.yml  rust-clippy.yml
aardwolf-actix/: Cargo.toml
aardwolf-actix/src/: error.rs
aardwolf-api/: README.md
aardwolf-api/backend-api/: README.md
aardwolf-api/database-api/: README.md
aardwolf-api/frontend-api/: README.md  get_posts.rs
aardwolf-localization/: Cargo.toml
aardwolf-localization/src/: lib.rs
aardwolf-models/: Cargo.toml
aardwolf-templates/: Cargo.toml
aardwolf-templates/src/: first_login.rs  lib.rs  sign_in.rs  sign_up.rs
aardwolf-templates/src/asides/: shortcuts.rs
aardwolf-templates/src/elements/: alert.rs  input.rs  input_select.rs  input_text.rs  input_textarea.rs  mod.rs  notification_content.rs  notification_dropdown.rs
aardwolf-templates/src/home/: feed.rs  home.rs  mod.rs  nav_top.rs
aardwolf-templates/src/posts/: mod.rs  new_post.rs  reply_post.rs
aardwolf-templates/templates/: base.rs.html  first_login.rs.html
aardwolf-templates/templates/asides/: settings.rs.html  shortcuts.rs.html
aardwolf-templates/templates/elements/: alert.rs.html  icon.rs.html  input_checkbox.rs.html  input_email.rs.html  input_password_confirm.rs.html  notification_content.rs.html  notification_dropdown.rs.html
aardwolf-templates/templates/home/: feed.rs.html  home.rs.html  nav_top.rs.html
aardwolf-templates/templates/posts/: new_post.rs.html  reply_post.rs.html
aardwolf-types/: Cargo.toml
aardwolf-types/src/: traits.rs
aardwolf-types/src/forms/: posts.rs
aardwolf-types/src/forms/personas/: creation_form.rs
aardwolf-yew-frontend/: Cargo.toml
doc/: TEMPLATE_FILE_STRUCTURE.md
docker/: Dockerfile
