[package]
name = "aardwolf-actix"
version = "0.1.0"
authors = ["asonix <asonix@asonix.dog>"]
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-http = "3.9"
actix-web = "4.9"
config = "0.14.0"
thiserror = "1.0"
log = "0.4"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = "1.10"

[dependencies.aardwolf-models]
version = "0.1"
path = "../aardwolf-models"

[dependencies.aardwolf-templates]
version = "0.1"
path = "../aardwolf-templates"

[dependencies.aardwolf-types]
version = "0.1"
path = "../aardwolf-types"

[dependencies.actix-session]
version = "0.9.0"
features = ["cookie-session"]

[dependencies.diesel]
version = "2.2"
default-features = false
features = ["postgres", "uuid", "chrono"]

[dependencies.rocket_i18n]
version = "0.4.1"
default-features = false

[dependencies.futures]
version = "0.3"
features = ["compat"]
